<resources>
    <string name="app_name">Math for Kids</string>

    <string name="welcome_title">Состав числа</string>
    <string name="rules">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равно числу в верхней фигуре, для этого нужно вставить недостающее число</string>
    <string name="example">Пример: в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно быть число 3, потому что 3 + 4 = 7</string>
    <string name="btn_next">Понятно</string>
    <string name="choose_level">Выбери уровень сложности</string>
    <string name="test_level">Тестовый</string>
    <string name="easy_level">Легкий</string>
    <string name="normal_level">Средний</string>
    <string name="hard_level">Тяжелый</string>
    <string name="text_for_progress_bar">Правильных ответов %s (минимум %s)</string>
    <string name="tv_answers_result">Необходимое количество правильных ответов: %s</string>
    <string name="tv_count_result">Твой счет: %s</string>
    <string name="tv_percent_result">Необходимый процент правильных ответов: %s</string>
    <string name="tv_your_percent_result">Процент правильных ответов: %s</string>
    <string name="try_again">Попробовать снова</string>

</resources>